--- a/package.json
+++ b/package.json
@@ -1,70 +1,24 @@
 {
-  "private": true,
-  "name": "microfox",
+  "name": "aiagent",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "build": "turbo build",
-    "build:watch": "turbo build -- --watch",
-    "changeset": "changeset",
-    "clean": "turbo clean",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "prettier-check": "prettier --check \"**/*.{js,ts,tsx,md,mdx}\"",
-    "type-check": "turbo type-check",
-    "prettier-fix": "prettier --write \"**/*.{js,ts,tsx,md,mdx}\"",
-    "test": "turbo test",
-    "test:watch": "turbo test --watch",
-    "test:coverage": "turbo test --coverage",
-    "ci:release": "turbo clean && turbo build && changeset publish",
-    "ci:version": "changeset version && npm install",
-    "clean-examples": "node .github/scripts/cleanup-examples-changesets.mjs && npm install"
+    "dev": "tsc -b && node dist/index.js"
   },
-  "lint-staged": {
-    "*": [
-      "prettier --ignore-unknown --write"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "@azure-rest/ai-inference": "^1.0.0-beta.6",
+    "axios": "^1.9.0",
+    "azure": "^0.10.6",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "openai": "^4.98.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@changesets/cli": "2.27.10",
-    "eslint": "8.57.1",
-    "eslint-config-microfox": "*",
-    "npm-run-all2": "^7.0.2",
-    "prettier": "^3.3.3",
-    "turbo": "2.3.3",
-    "typescript": "5.6.3"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "workspaces": [
-    "apps/*",
-    "packages/*",
-    "tools/*",
-    "examples/*",
-    "scripts/*"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/microfox-ai/microfox.git"
-  },
-  "bugs": {
-    "url": "https://github.com/microfox-ai/microfox/issues"
-  },
-  "keywords": [
-    "microfox"
-  ],
-  "packageManager": "npm@10.2.4",
-  "prettier": {
-    "tabWidth": 2,
-    "useTabs": false,
-    "singleQuote": true,
-    "arrowParens": "avoid",
-    "trailingComma": "all"
-  },
-  "dependencies": {
-    "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.0",
-    "glob": "^11.0.1",
-    "zod": "^3.24.3"
-  },
-  "type": "module"
+    "@types/express": "^5.0.1"
+  }
 }
