created whatsapp ai agent

--- a/packages/whatsapp-business/package.json
+++ b/packages/whatsapp-business/package.json
@@ -34,6 +34,9 @@
   ],
   "author": "TheMoonDevs",
   "license": "MIT",
+  "dependencies": {
+    "@microfox/core": "*"
+  },
   "devDependencies": {
     "@microfox/tsconfig": "*",
     "@types/node": "^18",
