--- a/packages/aws-ses/sls/package.json
+++ b/packages/aws-ses/sls/package.json
@@ -27,7 +27,9 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "serverless": "^3.38.0",
+    "serverless-api-gateway-throttling": "^2.0.3",
     "serverless-plugin-typescript": "^2.1.5",
+    "serverless-whitelisting": "^0.0.6",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
