fix: streamline ALLOWED_IP reference in serverless.yml files

--- a/packages/aws-ses/sls/serverless.yml
+++ b/packages/aws-ses/sls/serverless.yml
@@ -13,11 +13,9 @@ provider:
   environment: ${file(env.json)}
 
 custom:
-  allowedIp: ${env:ALLOWED_IP}
-
   whitelist:
     sources:
-      - ${self:custom.allowedIp}
+      - ${env:ALLOWED_IP}
 
   apiGatewayThrottling:
     maxRequestsPerSecond: 50 # steady-state RPS for entire stage
