--- a/.github/workflows/deploy-sls.yml
+++ b/.github/workflows/deploy-sls.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Run CI/CD deployment script
         env:
-          ALLOWED_IPS: ${{ secrets.ALLOWED_IP }}
+          ALLOWED_IP: ${{ secrets.ALLOWED_IP }}
           MICROFOX_API_KEY: ${{ secrets.MICROFOX_API_KEY }}
           ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
