fix: unify ALLOWED_IP reference to custom.allowedIp in serverless.yml files

--- a/packages/aws-ses/sls/serverless.yml
+++ b/packages/aws-ses/sls/serverless.yml
@@ -13,9 +13,11 @@ provider:
   environment: ${file(env.json)}
 
 custom:
+  allowedIp: ${env:ALLOWED_IP}
+
   whitelist:
     sources:
-      - ${env:ALLOWED_IP}
+      - ${self:custom.allowedIp}
 
   apiGatewayThrottling:
     maxRequestsPerSecond: 50 # steady-state RPS for entire stage
