--- a/packages/slack-web-tiny/sls/serverless.yml
+++ b/packages/slack-web-tiny/sls/serverless.yml
@@ -31,6 +31,7 @@ functions:
           path: /{functionName}
           method: any
           cors: true
+          private: true
 
 resources:
   Outputs:
