fix: add private access to API endpoints in aws-ses and slack-web-tiny

--- a/packages/aws-ses/sls/serverless.yml
+++ b/packages/aws-ses/sls/serverless.yml
@@ -35,6 +35,7 @@ functions:
           path: /{functionName}
           method: any
           cors: true
+          private: true
 
 resources:
   Outputs:
