--- a/examples/google-sheets-example/package.json
+++ b/examples/google-sheets-example/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@microfox/google-oauth": "*",
-    "@microfox/google-sheets": "*",
+    "@microfox/google-oauth": "^1.0.5",
+    "@microfox/google-sheets": "^1.1.1",
+    "google-auth-library": "^9.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
@@ -22,4 +23,4 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
-} 
+}
