--- a/packages/google-sheets/tsconfig.json
+++ b/packages/google-sheets/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@microfox/tsconfig/ts-library.json",
   "include": ["."],
-  "exclude": ["*/dist", "dist", "build", "node_modules"]
+  "exclude": ["*/dist", "dist", "build", "node_modules"],
+  "compilerOptions": {
+    "types": ["jest"]
+  }
 }
