--- a/package.json
+++ b/package.json
@@ -63,7 +63,12 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
+    "@ai-sdk/anthropic": "^1.2.11",
+    "@ai-sdk/google": "^1.2.18",
+    "ai": "^4.3.16",
     "glob": "^11.0.1",
+    "node-fetch": "^3.3.2",
+    "ts-node": "^10.9.2",
     "zod": "^3.24.3"
   },
   "type": "module"
