--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   },
   "devDependencies": {
     "@changesets/cli": "2.27.10",
+    "@types/node": "^22.15.19",
     "eslint": "8.57.1",
     "eslint-config-microfox": "*",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
     "turbo": "2.3.3",
-    "typescript": "5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^3.1.4"
   },
   "engines": {
     "node": ">=20.0.0"
