--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/google": "^1.2.18",
+    "ai": "^4.3.16",
     "glob": "^11.0.1",
     "zod": "^3.24.3"
   },
