--- a/packages/ai-provider-openai/package.json
+++ b/packages/ai-provider-openai/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
+    "@upstash/redis": "^1.34.9",
     "ai": "^4.3.16",
     "zod": "^3.24.2"
   },
