--- a/packages/aws-ses/package.json
+++ b/packages/aws-ses/package.json
@@ -27,7 +27,8 @@
     }
   },
   "dependencies": {
-    "@microfox/rest-sdk": "^1.0.5",
+    "@microfox/usage-tracker": "*",
+    "@microfox/rest-sdk": "*",
     "zod": "^3.24.3"
   },
   "devDependencies": {
