chore: update package list workflow to include README.md in git tracking and mock usage tracker in OpenAiProvider tests

--- a/.github/workflows/update-package-list.yml
+++ b/.github/workflows/update-package-list.yml
@@ -35,6 +35,7 @@ jobs:
         id: git-check
         run: |
           git add packages-list.json
+          git add README.md
           git diff --staged --quiet || echo "changes=true" >> $GITHUB_OUTPUT
 
       - name: Commit and push if changed
