chore: clean up and reset .microfox files in workflows
- Added steps to clean up and reset .microfox/packagefox-build.json and .microfox/pr-usage.json in both detect-changes.yml and update-package-list.yml workflows.

--- a/.github/workflows/detect-changes.yml
+++ b/.github/workflows/detect-changes.yml
@@ -194,6 +194,11 @@ jobs:
           chmod +x scripts/reset-microfox-files.sh
           ./scripts/reset-microfox-files.sh
 
+      - name: Clean up  & reset .microfox files
+        run: |
+          echo "{ requests: [] }" > .microfox/packagefox-build.json
+          echo "{}" > .microfox/pr-usage.json
+
       - name: Commit changes
         run: |
           git config --local user.email "action@github.com"
