--- a/packages/webhook-slack/package.json
+++ b/packages/webhook-slack/package.json
@@ -29,6 +29,9 @@
     "aws-lambda": "^1.0.7",
     "zod": "^3.24.2"
   },
+  "peerDependencies": {
+    "next": ">=13.0.0"
+  },
   "devDependencies": {
     "@microfox/tsconfig": "*",
     "@types/node": "^18",
