refactor: update SLS generation command in workflow to use npm script

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -23,6 +23,7 @@
     "embed:query": "ts-node src/embeddings/queryDocs.ts",
     "workflow:packagefox": "ts-node src/handleWorkflow.ts",
     "deploy:sls": "ts-node src/serverless/deploy/ci.ts",
+    "gen:sls": "ts-node src/agents/slsfox/genSls.ts",
     "api:query": "ts-node src/embeddings/queryApis.ts"
   },
   "dependencies": {
