--- a/.github/workflows/auto-sls-update.yml
+++ b/.github/workflows/auto-sls-update.yml
@@ -124,7 +124,7 @@ jobs:
             
             # Run the SLS generation script with ts-node
             cd scripts
-            npx ts-node src/agents/slsfox/genSls.ts "$PACKAGE_NAME" "$FUNCTIONS"
+            npm run gen:sls "$PACKAGE_NAME" "$FUNCTIONS"
             
             if [ $? -eq 0 ]; then
               echo "✅ Successfully updated SLS for $PACKAGE_NAME"
