--- a/.github/workflows/index-docs.yml
+++ b/.github/workflows/index-docs.yml
@@ -27,10 +27,10 @@ jobs:
           fetch-depth: 0
 
       # 2) Install Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Use Node.js 23.x
+        uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: '23'
 
       # 3) Run your embedDocs script
       - name: Index changed docs
