--- a/.github/workflows/deploy-sls.yml
+++ b/.github/workflows/deploy-sls.yml
@@ -4,10 +4,20 @@ on:
   push:
     branches:
       - main
+  workflow_run:
+    workflows: ['Auto SLS Update']
+    types:
+      - completed
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # Only run if the workflow_run was successful or if it's a direct push
+    if: |
+      github.event_name == 'push' || 
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
