--- a/.github/workflows/deploy-sls.yml
+++ b/.github/workflows/deploy-sls.yml
@@ -4,13 +4,14 @@ on:
   push:
     branches:
       - main
+      - vwjt_slsfox_may_2025
   workflow_run:
     workflows: ['Auto SLS Update']
     types:
       - completed
     branches:
       - main
-
+      - vwjt_slsfox_may_2025
 jobs:
   deploy:
     runs-on: ubuntu-latest
