--- a/.github/workflows/auto-sls-update.yml
+++ b/.github/workflows/auto-sls-update.yml
@@ -188,6 +188,15 @@ jobs:
         # Commit the staged SLS files first (before pulling)
         git commit -m "🤖 Auto-update SLS files for documentation changes"
         
+        # Stash any remaining unstaged changes (like tracking files)
+        if ! git diff --quiet; then
+          echo "Stashing remaining unstaged changes..."
+          git stash push -m "Temporary stash for non-SLS changes"
+          STASHED_CHANGES=true
+        else
+          STASHED_CHANGES=false
+        fi
+        
         # Now pull and push with retry logic to handle any conflicts
         for i in {1..3}; do
           echo "Attempt $i/3: Pulling latest changes and pushing..."
@@ -214,6 +223,12 @@ jobs:
             sleep 2
           fi
         done
+        
+        # Restore stashed changes if any were stashed
+        if [ "$STASHED_CHANGES" = "true" ]; then
+          echo "Restoring stashed changes..."
+          git stash pop || echo "Failed to restore stashed changes (they may no longer be relevant)"
+        fi
 
     - name: Summary
       if: steps.detect-changes.outputs.has_changes == 'true'
