--- a/packages/discord/sls/package.json
+++ b/packages/discord/sls/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint  --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@microfox/crypto-sdk": "1.0.1",
+    "@microfox/crypto-sdk": "^1.0.1",
     "dotenv": "^16.4.5",
     "@microfox/discord": "^1.1.1"
   },
