--- a/.github/workflows/detect-changes.yml
+++ b/.github/workflows/detect-changes.yml
@@ -198,7 +198,7 @@ jobs:
 
       - name: Clean up  & reset .microfox files
         run: |
-          echo "{ requests: [] }" > .microfox/packagefox-build.json
+          echo '{"requests": []}' > .microfox/packagefox-build.json
           echo "{}" > .microfox/pr-usage.json
 
       - name: Commit changes
