--- a/packages/crypto-sdk/package.json
+++ b/packages/crypto-sdk/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@microfox/crypto-sdk",
   "version": "1.0.2",
+  "description": "Crypto SDK for Microfox",
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist/**/*",
     "CHANGELOG.md"
@@ -26,11 +29,11 @@
     "tsup": "^8",
     "typescript": "5.6.3"
   },
-  "engines": {
-    "node": ">=20.0.0"
-  },
   "publishConfig": {
     "access": "public"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   },
   "homepage": "https://github.com/microfox-ai/microfox",
   "repository": {
@@ -41,6 +44,9 @@
     "url": "https://github.com/microfox-ai/microfox/issues"
   },
   "keywords": [
-    "microfox"
+    "microfox",
+    "crypto",
+    "sdk",
+    "typescript"
   ]
 }
