--- a/scripts/package.json
+++ b/scripts/package.json
@@ -20,6 +20,8 @@
     "update:package-info": "ts-node src/agents/metafox/updateRootPackageInfo.ts",
     "update:package": "npm run update:package-list && npm run update:package-info",
     "embed:docs": "ts-node src/embeddings/embedDocs.ts",
+    "save:package-info": "ts-node src/package-info/savePackageInfo.ts",
+    "query:package-info": "ts-node src/package-info/queryPackageInfo.ts",
     "embed:query": "ts-node src/embeddings/queryDocs.ts",
     "workflow:packagefox": "ts-node src/handleWorkflow.ts",
     "deploy:sls": "ts-node src/agents/slsfox/deploy/ci.ts",
